@@ -7,17 +7,23 @@ class SocialFormTest(zeit.cms.testing.BrowserTestCase):
 
     layer = zeit.content.article.testing.LAYER
 
+    def setUp(self):
+        super(SocialFormTest, self).setUp()
+        self.browser.open(
+            'http://localhost/++skin++vivi/repository/'
+            'online/2007/01/Somalia/@@checkout')
+
     def get_article(self):
         with zeit.cms.testing.site(self.getRootFolder()):
             with zeit.cms.testing.interaction():
-                return zeit.cms.interfaces.ICMSContent(
+                return zeit.cms.interfaces.ICMSWCContent(
                     'http://xml.zeit.de/online/2007/01/Somalia')
 
     def open_form(self):
         # XXX A simple browser.reload() does not work, why?
         self.browser.open(
-            'http://localhost/++skin++vivi/repository/'
-            'online/2007/01/Somalia/@@edit.form.social?show_form=1')
+            'http://localhost/++skin++vivi/workingcopy/zope.user/'
+            'Somalia/@@edit.form.social?show_form=1')
 
     def test_stores_IPushMessage_fields(self):
         self.open_form()
